--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proyecto Integrador - Inicio</title>
   </head>
   <body>
-    <div id="app"></div>
+
+    <header class="main-header">
+      <input type="checkbox" id="menu">
+
+      <nav class="nac-bar">
+        <ul class="nav-bar__nav-list">
+          <li class="nav-bar__nav-item">
+            <a href="" class="nav-bar__nav-link">Inicio</a>
+          </li>
+          <li class="nav-bar__nav-item">
+            <a href="" class="nav-bar__nav-link">Alta</a>
+          </li>
+          <li class="nav-bar__nav-item">
+            <a href="" class="nav-bar__nav-link">Nosotros</a>
+          </li>
+          <li class="nav-bar__nav-item">
+            <a href="" class="nav-bar__nav-link">Contacto</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
