Agrego el contenedor del logo, el buscador y el carrito de compra

--- a/index.html
+++ b/index.html
@@ -25,8 +25,22 @@
             <a href="" class="nav-bar__nav-link">Contacto</a>
           </li>
         </ul>
-      </nav>
+      </nav> <!-- .nav-bar -->
+      
+      <div class="search-bar">
+        <div class="search-bar__logo-container">Logo</div>
+        <form action="#" class="search-bar__form-container">
+          <label for="busqueda" class="search-bar__form-label">Buscar</label>
+          <input type="search" id="busqueda" class="search-bar__form-search">
+          <button type="submit" class="search_bar__form-submit">Buscar</button>
+        </form>
+        <div class="search-bar__carrito-container">C</div>
+      </div>
+
+
     </header>
+
+
   
     <script type="module" src="/src/main.js"></script>
   </body>
