agrego el main con el section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,17 @@
           <button type="submit" class="search_bar__form-submit">Buscar</button>
         </form>
         <div class="search-bar__carrito-container">C</div>
-      </div>
+      </div> <!-- .search-bar -->
+
+      <main>
+        <section class="section-cards">
+          <header class="section-cards__header">
+            <h1>Lorem ipsum dolor sit.</h1>
+            <p>Se encontraron X productos</p>
+          </header>
+        </section>
+
+      </main>
 
 
     </header>
