agrego las cards dentro del sections

--- a/index.html
+++ b/index.html
@@ -45,6 +45,84 @@
           </header>
         </section>
 
+        <section class="cards-container">
+          
+          <div class="card">
+            <article class="card__article">
+              <div class="card__image-container">
+                <img src="public/imgs/botines -nike-blanco-turquesa.webp" alt="botines nike de color blanco y celeste">
+              </div>
+                <div class="card__content">
+                  <h2 class="card__heading">Nike Phantom GX Elite DF SG-PRO Player Edition</h2>
+                  <div class="card__description">
+                    <p>La tecnología All Conditions Control (ACC) está diseñada para brindar un toque confiable en condiciones tanto húmedas como secas. Permite que la superficie mantenga el mismo nivel de fricción para un mejor control del balón.</p>
+                </div>
+              </div>
+            </article>
+          </div> <!-- .card -->
+
+          
+          <div class="card">
+            <article class="card__article">
+              <div class="card__image-container">
+                <img src="public/imgs/botines -nike-blanco-turquesa.webp" alt="botines nike de color blanco y celeste">
+              </div>
+                <div class="card__content">
+                  <h2 class="card__heading">Nike Phantom GX Elite DF SG-PRO Player Edition</h2>
+                  <div class="card__description">
+                    <p>La tecnología All Conditions Control (ACC) está diseñada para brindar un toque confiable en condiciones tanto húmedas como secas. Permite que la superficie mantenga el mismo nivel de fricción para un mejor control del balón.</p>
+                </div>
+              </div>
+            </article>
+          </div> <!-- .card -->
+
+
+          <div class="card">
+            <article class="card__article">
+              <div class="card__image-container">
+                <img src="public/imgs/botines -nike-blanco-turquesa.webp" alt="botines nike de color blanco y celeste">
+              </div>
+                <div class="card__content">
+                  <h2 class="card__heading">Nike Phantom GX Elite DF SG-PRO Player Edition</h2>
+                  <div class="card__description">
+                    <p>La tecnología All Conditions Control (ACC) está diseñada para brindar un toque confiable en condiciones tanto húmedas como secas. Permite que la superficie mantenga el mismo nivel de fricción para un mejor control del balón.</p>
+                </div>
+              </div>
+            </article>
+          </div> <!-- .card -->
+
+
+          <div class="card">
+            <article class="card__article">
+              <div class="card__image-container">
+                <img src="public/imgs/botines -nike-blanco-turquesa.webp" alt="botines nike de color blanco y celeste">
+              </div>
+                <div class="card__content">
+                  <h2 class="card__heading">Nike Phantom GX Elite DF SG-PRO Player Edition</h2>
+                  <div class="card__description">
+                    <p>La tecnología All Conditions Control (ACC) está diseñada para brindar un toque confiable en condiciones tanto húmedas como secas. Permite que la superficie mantenga el mismo nivel de fricción para un mejor control del balón.</p>
+                </div>
+              </div>
+            </article>
+          </div> <!-- .card -->
+
+
+          <div class="card">
+            <article class="card__article">
+              <div class="card__image-container">
+                <img src="public/imgs/botines -nike-blanco-turquesa.webp" alt="botines nike de color blanco y celeste">
+              </div>
+                <div class="card__content">
+                  <h2 class="card__heading">Nike Phantom GX Elite DF SG-PRO Player Edition</h2>
+                  <div class="card__description">
+                    <p>La tecnología All Conditions Control (ACC) está diseñada para brindar un toque confiable en condiciones tanto húmedas como secas. Permite que la superficie mantenga el mismo nivel de fricción para un mejor control del balón.</p>
+                </div>
+              </div>
+            </article>
+          </div> <!-- .card -->
+
+        </section>
+
       </main>
 
 
