agrego los productos a mostrar en las cards

--- a/index.html
+++ b/index.html
@@ -50,22 +50,7 @@
           <div class="card">
             <article class="card__article">
               <div class="card__image-container">
-                <img src="public/imgs/botines -nike-blanco-turquesa.webp" alt="botines nike de color blanco y celeste">
-              </div>
-                <div class="card__content">
-                  <h2 class="card__heading">Nike Phantom GX Elite DF SG-PRO Player Edition</h2>
-                  <div class="card__description">
-                    <p>La tecnología All Conditions Control (ACC) está diseñada para brindar un toque confiable en condiciones tanto húmedas como secas. Permite que la superficie mantenga el mismo nivel de fricción para un mejor control del balón.</p>
-                </div>
-              </div>
-            </article>
-          </div> <!-- .card -->
-
-          
-          <div class="card">
-            <article class="card__article">
-              <div class="card__image-container">
-                <img src="public/imgs/botines -nike-blanco-turquesa.webp" alt="botines nike de color blanco y celeste">
+                <img src="imgs/botines -nike-blanco-turquesa.webp" alt="botines nike de color blanco y celeste">
               </div>
                 <div class="card__content">
                   <h2 class="card__heading">Nike Phantom GX Elite DF SG-PRO Player Edition</h2>
@@ -80,12 +65,12 @@
           <div class="card">
             <article class="card__article">
               <div class="card__image-container">
-                <img src="public/imgs/botines -nike-blanco-turquesa.webp" alt="botines nike de color blanco y celeste">
+                <img src="imgs/botines-nike-tiempo-salmón.webp" alt="botines nike tiempo de color salmón">
               </div>
                 <div class="card__content">
-                  <h2 class="card__heading">Nike Phantom GX Elite DF SG-PRO Player Edition</h2>
+                  <h2 class="card__heading">Nike Tiempo Legend 10 Academy</h2>
                   <div class="card__description">
-                    <p>La tecnología All Conditions Control (ACC) está diseñada para brindar un toque confiable en condiciones tanto húmedas como secas. Permite que la superficie mantenga el mismo nivel de fricción para un mejor control del balón.</p>
+                    <p>El cuero con diseño avanzado FlyTouch Lite es increíblemente suave. Ayuda a que el calzado se adapte al pie para ofrecer mayor comodidad sin exceso de elasticidad. La confección de la lengüeta con acolchado adicional te brinda una sensación de seguridad y comodidad en las áreas clave. El forro de microfibra crea una sensación premium</p>
                 </div>
               </div>
             </article>
@@ -95,12 +80,12 @@
           <div class="card">
             <article class="card__article">
               <div class="card__image-container">
-                <img src="public/imgs/botines -nike-blanco-turquesa.webp" alt="botines nike de color blanco y celeste">
+                <img src="imgs/botines-adidas-f50-blanco.webp" alt="botines adidas blanco, azul y rojo f50">
               </div>
                 <div class="card__content">
-                  <h2 class="card__heading">Nike Phantom GX Elite DF SG-PRO Player Edition</h2>
+                  <h2 class="card__heading">Botines Con Tapones adidas F50 League Fg</h2>
                   <div class="card__description">
-                    <p>La tecnología All Conditions Control (ACC) está diseñada para brindar un toque confiable en condiciones tanto húmedas como secas. Permite que la superficie mantenga el mismo nivel de fricción para un mejor control del balón.</p>
+                    <p>Parte superior Fiberskin con estampado Sprintgrid. Suela Sprintplate 360 para terreno firme/multisuperficie</p>
                 </div>
               </div>
             </article>
@@ -110,12 +95,27 @@
           <div class="card">
             <article class="card__article">
               <div class="card__image-container">
-                <img src="public/imgs/botines -nike-blanco-turquesa.webp" alt="botines nike de color blanco y celeste">
+                <img src="imgs/botines-adidas-predator-negro-rosa.webp" alt="botines adidas predator negro y rosa">
               </div>
                 <div class="card__content">
-                  <h2 class="card__heading">Nike Phantom GX Elite DF SG-PRO Player Edition</h2>
+                  <h2 class="card__heading">Botines Con Tapones adidas Predator Accuracy.2 Fg</h2>
                   <div class="card__description">
-                    <p>La tecnología All Conditions Control (ACC) está diseñada para brindar un toque confiable en condiciones tanto húmedas como secas. Permite que la superficie mantenga el mismo nivel de fricción para un mejor control del balón.</p>
+                    <p>El exterior HybridTouch suave de estos botines incorpora un cuello de corte medio en material textil para un ajuste perfecto</p>
+                </div>
+              </div>
+            </article>
+          </div> <!-- .card -->
+
+
+          <div class="card">
+            <article class="card__article">
+              <div class="card__image-container">
+                <img src="public/imgs/botines-puma-rojo.webp" alt="botines puma rojo">
+              </div>
+                <div class="card__content">
+                  <h2 class="card__heading">Botines Con Tapones Puma Future 7 Pro Fg/Ag</h2>
+                  <div class="card__description">
+                    <p>El Dynamic Motion System otorga tracción y agilidad para movimientos rápidos y cambios de velocidad. Cuando te vistes de FUTURE, eres el futuro.</p>
                 </div>
               </div>
             </article>
