importo el parcial _resets.scss al archivo principal main.scss

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="card">
             <article class="card__article">
               <div class="card__image-container">
-                <img src="public/imgs/botines-puma-rojo.webp" alt="botines puma rojo">
+                <img src="imgs/botines-puma-rojo.webp" alt="botines puma rojo">
               </div>
                 <div class="card__content">
                   <h2 class="card__heading">Botines Con Tapones Puma Future 7 Pro Fg/Ag</h2>
