agregue los estilos al search bar

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <form action="#" class="search-bar__form-container">
           <label for="busqueda" class="search-bar__form-label">Buscar</label>
           <input type="search" id="busqueda" class="search-bar__form-search">
-          <button type="submit" class="search_bar__form-submit">Buscar</button>
+          <button type="submit" class="search-bar__form-submit">Buscar</button>
         </form>
         <div class="search-bar__carrito-container">C</div>
       </div> <!-- .search-bar -->
       
     </header>
-    
+
       <main>
 
         <section class="section-cards">
