agregue los estilos a las imagenes de las cards

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <span class="menu-toogle__bottom-bread"></span>
           </label>
         </div> <!-- .menu-toogle -->
-        
+
       </div> <!-- .search-bar -->
       
     </header>
@@ -62,7 +62,7 @@
           <div class="card">
             <article class="card__article">
               <div class="card__image-container">
-                <img src="imgs/botines -nike-blanco-turquesa.webp" alt="botines nike de color blanco y celeste">
+                <img class="card__image" src="imgs/botines -nike-blanco-turquesa.webp" alt="botines nike de color blanco y celeste">
               </div>
                 <div class="card__content">
                   <h2 class="card__heading">Nike Phantom GX Elite DF SG-PRO Player Edition</h2>
@@ -77,7 +77,7 @@
           <div class="card">
             <article class="card__article">
               <div class="card__image-container">
-                <img src="imgs/botines-nike-tiempo-salmón.webp" alt="botines nike tiempo de color salmón">
+                <img class="card__image" src="imgs/botines-nike-tiempo-salmón.webp" alt="botines nike tiempo de color salmón">
               </div>
                 <div class="card__content">
                   <h2 class="card__heading">Nike Tiempo Legend 10 Academy</h2>
@@ -92,7 +92,7 @@
           <div class="card">
             <article class="card__article">
               <div class="card__image-container">
-                <img src="imgs/botines-adidas-f50-blanco.webp" alt="botines adidas blanco, azul y rojo f50">
+                <img class="card__image" src="imgs/botines-adidas-f50-blanco.webp" alt="botines adidas blanco, azul y rojo f50">
               </div>
                 <div class="card__content">
                   <h2 class="card__heading">Botines Con Tapones adidas F50 League Fg</h2>
@@ -107,7 +107,7 @@
           <div class="card">
             <article class="card__article">
               <div class="card__image-container">
-                <img src="imgs/botines-adidas-predator-negro-rosa.webp" alt="botines adidas predator negro y rosa">
+                <img class="card__image" src="imgs/botines-adidas-predator-negro-rosa.webp" alt="botines adidas predator negro y rosa">
               </div>
                 <div class="card__content">
                   <h2 class="card__heading">Botines Con Tapones adidas Predator Accuracy.2 Fg</h2>
@@ -122,7 +122,7 @@
           <div class="card">
             <article class="card__article">
               <div class="card__image-container">
-                <img src="imgs/botines-puma-rojo.webp" alt="botines puma rojo">
+                <img class="card__image" src="imgs/botines-puma-rojo.webp" alt="botines puma rojo">
               </div>
                 <div class="card__content">
                   <h2 class="card__heading">Botines Con Tapones Puma Future 7 Pro Fg/Ag</h2>
