optimice unas imagenes de los productos y ademas trabaje con los estilos de las card para darle animación a traves del transform y clip-path

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
           <div class="card">
             <article class="card__article">
               <div class="card__image-container">
-                <img class="card__image" src="imgs/botines -nike-blanco-turquesa.webp" alt="botines nike de color blanco y celeste">
+                <img class="card__image" src="imgs/nike-airzoom-vapor.webp" alt="botines nike de color blanco y celeste">
               </div>
                 <div class="card__content">
-                  <h2 class="card__heading">Nike Phantom GX Elite DF SG-PRO Player Edition</h2>
+                  <h2 class="card__heading">Botines Nike AirZoom Vapor 16 Pro Fg</h2>
                   <div class="card__description">
-                    <p>La tecnología All Conditions Control (ACC) está diseñada para brindar un toque confiable en condiciones tanto húmedas como secas. Permite que la superficie mantenga el mismo nivel de fricción para un mejor control del balón.</p>
+                    <p>os Nike Air Zoom Vapor 16 Pro FG son botines de fútbol ligeros y de alto rendimiento, diseñados para jugadores rápidos. Cuentan con la tecnología Zoom Air en la entresuela para una amortiguación reactiva, y un empeine de Flyknit que ofrece un ajuste ceñido y transpirable.</p>
                 </div>
               </div>
             </article>
@@ -77,10 +77,10 @@
           <div class="card">
             <article class="card__article">
               <div class="card__image-container">
-                <img class="card__image" src="imgs/botines-nike-tiempo-salmón.webp" alt="botines nike tiempo de color salmón">
+                <img class="card__image" src="imgs/nike-tiempo-legend.webp" alt="botines nike tiempo de color salmón">
               </div>
                 <div class="card__content">
-                  <h2 class="card__heading">Nike Tiempo Legend 10 Academy</h2>
+                  <h2 class="card__heading">Botines Nike Tiempo Legend 10 Academy</h2>
                   <div class="card__description">
                     <p>El cuero con diseño avanzado FlyTouch Lite es increíblemente suave. Ayuda a que el calzado se adapte al pie para ofrecer mayor comodidad sin exceso de elasticidad. La confección de la lengüeta con acolchado adicional te brinda una sensación de seguridad y comodidad en las áreas clave. El forro de microfibra crea una sensación premium</p>
                 </div>
