agregue estilos para que desaparezca el navbar cuando es en mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="main-header">
       <input type="checkbox" id="menu">
 
-      <nav class="nac-bar">
+      <nav class="nav-bar">
         <ul class="nav-bar__nav-list">
           <li class="nav-bar__nav-item">
             <a href="" class="nav-bar__nav-link">Inicio</a>
@@ -52,8 +52,8 @@
 
         <section class="section-cards">
           <header class="section-cards__header">
-            <h1>Lorem ipsum dolor sit.</h1>
-            <p>Se encontraron X productos</p>
+            <h1>Productos destacados</h1>
+            <p>Se encontraron 5 productos destacados</p>
           </header>
         </section>
 
@@ -62,12 +62,12 @@
           <div class="card">
             <article class="card__article">
               <div class="card__image-container">
-                <img class="card__image" src="imgs/nike-airzoom-vapor.webp" alt="botines nike de color blanco y celeste">
+                <img class="card__image" src="imgs/nike-airzoom-vapor.webp" alt="botines nike azul y celeste">
               </div>
                 <div class="card__content">
                   <h2 class="card__heading">Botines Nike AirZoom Vapor 16 Pro Fg</h2>
                   <div class="card__description">
-                    <p>os Nike Air Zoom Vapor 16 Pro FG son botines de fútbol ligeros y de alto rendimiento, diseñados para jugadores rápidos. Cuentan con la tecnología Zoom Air en la entresuela para una amortiguación reactiva, y un empeine de Flyknit que ofrece un ajuste ceñido y transpirable.</p>
+                    <p>Los Nike Air Zoom Vapor 16 Pro FG son botines de fútbol ligeros y de alto rendimiento, diseñados para jugadores rápidos.</p>                            
                 </div>
               </div>
             </article>
@@ -82,7 +82,7 @@
                 <div class="card__content">
                   <h2 class="card__heading">Botines Nike Tiempo Legend 10 Academy</h2>
                   <div class="card__description">
-                    <p>El cuero con diseño avanzado FlyTouch Lite es increíblemente suave. Ayuda a que el calzado se adapte al pie para ofrecer mayor comodidad sin exceso de elasticidad. La confección de la lengüeta con acolchado adicional te brinda una sensación de seguridad y comodidad en las áreas clave. El forro de microfibra crea una sensación premium</p>
+                    <p>El cuero con diseño avanzado FlyTouch Lite es increíblemente suave. Ayuda a que el calzado se adapte al pie para ofrecer mayor comodidad sin exceso de elasticidad.</p>
                 </div>
               </div>
             </article>
