generé las card dinamicamente, cree la carpeta db y el archivo productos.js

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/185624c90b.js" crossorigin="anonymous"></script>
     <title>Proyecto Integrador - Inicio</title>
   </head>
   <body>
@@ -34,7 +35,7 @@
           <input type="search" id="busqueda" class="search-bar__form-search">
           <button type="submit" class="search-bar__form-submit">Buscar</button>
         </form>
-        <div class="search-bar__carrito-container">C</div>
+        <div class="search-bar__carrito-container">C</div>   
 
         <div class="menu-toogle">
           <label for="menu" class="menu-toogle__label">
@@ -67,7 +68,8 @@
                 <div class="card__content">
                   <h2 class="card__heading">Botines Nike AirZoom Vapor 16 Pro Fg</h2>
                   <div class="card__description">
-                    <p>Los Nike Air Zoom Vapor 16 Pro FG son botines de fútbol ligeros y de alto rendimiento, diseñados para jugadores rápidos.</p>                            
+                    <p>Los Nike Air Zoom Vapor 16 Pro FG son botines de fútbol ligeros y de alto rendimiento, diseñados para jugadores rápidos.</p>
+                    <button class="card__button">Ver producto</button>                            
                 </div>
               </div>
             </article>
@@ -77,12 +79,13 @@
           <div class="card">
             <article class="card__article">
               <div class="card__image-container">
-                <img class="card__image" src="imgs/nike-tiempo-legend.webp" alt="botines nike tiempo de color salmón">
+                <img class="card__image" src="imgs/nike-tiempo-legend.webp" alt="botines nike tiempo de color salmon">
               </div>
                 <div class="card__content">
                   <h2 class="card__heading">Botines Nike Tiempo Legend 10 Academy</h2>
                   <div class="card__description">
                     <p>El cuero con diseño avanzado FlyTouch Lite es increíblemente suave. Ayuda a que el calzado se adapte al pie para ofrecer mayor comodidad sin exceso de elasticidad.</p>
+                    <button class="card__button">Ver producto</button>
                 </div>
               </div>
             </article>
@@ -95,9 +98,10 @@
                 <img class="card__image" src="imgs/botines-adidas-f50-blanco.webp" alt="botines adidas blanco, azul y rojo f50">
               </div>
                 <div class="card__content">
-                  <h2 class="card__heading">Botines Con Tapones adidas F50 League Fg</h2>
+                  <h2 class="card__heading">Botines adidas F50 League Fg</h2>
                   <div class="card__description">
-                    <p>Parte superior Fiberskin con estampado Sprintgrid. Suela Sprintplate 360 para terreno firme/multisuperficie</p>
+                    <p>Los Adidas F50 League FG son botines ligeros y de alto rendimiento, diseñados para jugadores que buscan velocidad y control.</p>
+                    <button class="card__button">Ver producto</button>
                 </div>
               </div>
             </article>
@@ -110,9 +114,10 @@
                 <img class="card__image" src="imgs/botines-adidas-predator-negro-rosa.webp" alt="botines adidas predator negro y rosa">
               </div>
                 <div class="card__content">
-                  <h2 class="card__heading">Botines Con Tapones adidas Predator Accuracy.2 Fg</h2>
+                  <h2 class="card__heading">Botines adidas Predator Accuracy.2 Fg</h2>
                   <div class="card__description">
                     <p>El exterior HybridTouch suave de estos botines incorpora un cuello de corte medio en material textil para un ajuste perfecto</p>
+                    <button class="card__button">Ver producto</button>
                 </div>
               </div>
             </article>
@@ -125,9 +130,10 @@
                 <img class="card__image" src="imgs/botines-puma-rojo.webp" alt="botines puma rojo">
               </div>
                 <div class="card__content">
-                  <h2 class="card__heading">Botines Con Tapones Puma Future 7 Pro Fg/Ag</h2>
+                  <h2 class="card__heading">Botines Puma Future 7 Pro Fg/Ag</h2>
                   <div class="card__description">
                     <p>El Dynamic Motion System otorga tracción y agilidad para movimientos rápidos y cambios de velocidad. Cuando te vistes de FUTURE, eres el futuro.</p>
+                    <button class="card__button">Ver producto</button>
                 </div>
               </div>
             </article>
