modifico el buscador, agrego el logo de la pagina y el footer con sus logos de pagos

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
       </nav> <!-- .nav-bar -->
       
       <div class="search-bar">
-        <div class="search-bar__logo-container">Logo</div>
+        <div class="search-bar__logo-container">
+          <img src="imgs/logo.png" alt="">
+        </div>
         <form action="#" class="search-bar__form-container">
           <label for="busqueda" class="search-bar__form-label">Buscar</label>
           <input type="search" id="busqueda" class="search-bar__form-search">
@@ -58,90 +60,23 @@
           </header>
         </section>
 
-        <section class="cards-container">
+        <section class="cards-container" id="container-productos"></section>
+
+
+        <footer class="footer">
+          <p class="footer-copyright">© 2025 Mega Sports. Todos los derechos reservados.</p>
+          <div class="footer__payments-logo">
+            <img src="imgs/visa-logo.jpg" alt="">
+            <img src="imgs/Mastercard-logo.png" alt="">
+            <img src="imgs/logo-american-express.png" alt="">
+            <img src="imgs/banelco-logo.png" alt="">
+            <img src="imgs/Red-link-logo.svg.png" alt="">
           
-          <div class="card">
-            <article class="card__article">
-              <div class="card__image-container">
-                <img class="card__image" src="imgs/nike-airzoom-vapor.webp" alt="botines nike azul y celeste">
-              </div>
-                <div class="card__content">
-                  <h2 class="card__heading">Botines Nike AirZoom Vapor 16 Pro Fg</h2>
-                  <div class="card__description">
-                    <p>Los Nike Air Zoom Vapor 16 Pro FG son botines de fútbol ligeros y de alto rendimiento, diseñados para jugadores rápidos.</p>
-                    <button class="card__button">Ver producto</button>                            
-                </div>
-              </div>
-            </article>
-          </div> <!-- .card -->
 
+          </div>
+        </footer> <!-- .footer -->
 
-          <div class="card">
-            <article class="card__article">
-              <div class="card__image-container">
-                <img class="card__image" src="imgs/nike-tiempo-legend.webp" alt="botines nike tiempo de color salmon">
-              </div>
-                <div class="card__content">
-                  <h2 class="card__heading">Botines Nike Tiempo Legend 10 Academy</h2>
-                  <div class="card__description">
-                    <p>El cuero con diseño avanzado FlyTouch Lite es increíblemente suave. Ayuda a que el calzado se adapte al pie para ofrecer mayor comodidad sin exceso de elasticidad.</p>
-                    <button class="card__button">Ver producto</button>
-                </div>
-              </div>
-            </article>
-          </div> <!-- .card -->
-
-
-          <div class="card">
-            <article class="card__article">
-              <div class="card__image-container">
-                <img class="card__image" src="imgs/botines-adidas-f50-blanco.webp" alt="botines adidas blanco, azul y rojo f50">
-              </div>
-                <div class="card__content">
-                  <h2 class="card__heading">Botines adidas F50 League Fg</h2>
-                  <div class="card__description">
-                    <p>Los Adidas F50 League FG son botines ligeros y de alto rendimiento, diseñados para jugadores que buscan velocidad y control.</p>
-                    <button class="card__button">Ver producto</button>
-                </div>
-              </div>
-            </article>
-          </div> <!-- .card -->
-
-
-          <div class="card">
-            <article class="card__article">
-              <div class="card__image-container">
-                <img class="card__image" src="imgs/botines-adidas-predator-negro-rosa.webp" alt="botines adidas predator negro y rosa">
-              </div>
-                <div class="card__content">
-                  <h2 class="card__heading">Botines adidas Predator Accuracy.2 Fg</h2>
-                  <div class="card__description">
-                    <p>El exterior HybridTouch suave de estos botines incorpora un cuello de corte medio en material textil para un ajuste perfecto</p>
-                    <button class="card__button">Ver producto</button>
-                </div>
-              </div>
-            </article>
-          </div> <!-- .card -->
-
-
-          <div class="card">
-            <article class="card__article">
-              <div class="card__image-container">
-                <img class="card__image" src="imgs/botines-puma-rojo.webp" alt="botines puma rojo">
-              </div>
-                <div class="card__content">
-                  <h2 class="card__heading">Botines Puma Future 7 Pro Fg/Ag</h2>
-                  <div class="card__description">
-                    <p>El Dynamic Motion System otorga tracción y agilidad para movimientos rápidos y cambios de velocidad. Cuando te vistes de FUTURE, eres el futuro.</p>
-                    <button class="card__button">Ver producto</button>
-                </div>
-              </div>
-            </article>
-          </div> <!-- .card -->
-
-        </section>
-
-      </main>
+      </main>     
 
 
 
