agrego a vite.config la configuracion para que me tome los demas archivos html

--- a/src/pages/contacto/contacto.html
+++ b/src/pages/contacto/contacto.html
@@ -22,7 +22,7 @@
             <a href="../nosotros/nosotros.html" class="nav-bar__nav-link">Nosotros</a>
           </li>
           <li class="nav-bar__nav-item">
-            <a href="../contacto/contacto.html" class="nav-bar__nav-link">Contacto</a>
+            <a href="" class="nav-bar__nav-link">Contacto</a>
           </li>
         </ul>
       </nav> <!-- .nav-bar -->
@@ -124,6 +124,6 @@
 
 
 
-    <script type="module" src="/src/pages/contacto/contacto.js"></script>
+    <script type="module" src="./contacto.js"></script>
 </body>
 </html>
