--- a/src/pages/nosotros/nosotros.html
+++ b/src/pages/nosotros/nosotros.html
@@ -20,10 +20,10 @@
               <a href="" class="nav-bar__nav-link">Alta</a>
             </li>
             <li class="nav-bar__nav-item">
-              <a href="./nosotros.html" class="nav-bar__nav-link">Nosotros</a>
+              <a href="" class="nav-bar__nav-link">Nosotros</a>
             </li>
             <li class="nav-bar__nav-item">
-              <a href="../../../src/pages/contacto/contacto.html" class="nav-bar__nav-link">Contacto</a>
+              <a href="../contacto/contacto.html" class="nav-bar__nav-link">Contacto</a>
             </li>
           </ul>
         </nav> <!-- .nav-bar -->
@@ -93,6 +93,6 @@
       </footer> <!-- .footer -->
 
 
-      <script type="module" src="/src/pages/nosotros/nosotros.js"></script>   
+      <script type="module" src="./nosotros.js"></script>   
 </body>
 </html>
