--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <a href="" class="nav-bar__nav-link">Alta</a>
           </li>
           <li class="nav-bar__nav-item">
-            <a href="./src/pages/nosotros/nosotros.html" class="nav-bar__nav-link">Nosotros</a>
+            <a href="src/pages/nosotros/nosotros.html" class="nav-bar__nav-link">Nosotros</a>
           </li>
           <li class="nav-bar__nav-item">
-            <a href="./src/pages/contacto/contacto.html" class="nav-bar__nav-link">Contacto</a>
+            <a href="src/pages/contacto/contacto.html" class="nav-bar__nav-link">Contacto</a>
           </li>
         </ul>
       </nav> <!-- .nav-bar -->
